Icons align fixed

--- a/src/components/Notebook/styles.css
+++ b/src/components/Notebook/styles.css
@@ -47,13 +47,13 @@
 
 
 .icons{
+    margin-top: .8rem;
     cursor: pointer;
     border-radius: 5px;
     padding: 1px;
     width: 19px;
     height: 19px;
     transition: background-color .3s ease;
-    /* margin-top: 8px; */
 }
 
 .icons:hover{
